tests/fixtures/invalid/bytes_div_bytes.py
# Test bytes division (unsupported operator)
x: bytes = b"hello"
y: bytes = b"world"
result: bytes = x / y
